# doppel

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: examples.md  usage.md
doppel/: __init__.py  __main__.py  cli.py  remover.py  scanner.py  utils.py
scripts/: install.sh
tests/: __init__.py  test_cli.py  test_remover.py  test_scanner.py  test_utils.py
